# DeferredRender

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  README.md
App/: CMakeLists.txt
App/shaders/: common.hlsli  compile.bat  mesh.ps.hlsl  mesh.vs.hlsl  mesh_frag.cso  mesh_frag.spv  mesh_vert.cso  mesh_vert.spv
App/src/: AppLayer.cpp  AppLayer.h  main.cpp
Core/: CMakeLists.txt
Core/shaders/: MultiScatteringLUT.cs.hlsl  SkyTransmittance.cs.hlsl  SkyViewLUT.cs.hlsl  TransmittanceLUT.cs.hlsl
Core/src/: Engine.cpp  Engine.h
Core/src/Asset/: Asset.h  AssetLoader.h  AssetManager.cpp  AssetManager.h  AssetSystem.cpp  AssetSystem.h  GltfImporter.cpp  GltfImporter.h  Meta.cpp  Meta.h  TextureImporter.cpp  TextureImporter.h
Core/src/ECS/: Entity.h  Scene.cpp  SceneManager.cpp  SceneManager.h
Core/src/Graphics/: D3D12Device.cpp  RenderBackend.h  VulkanDevice.cpp
Core/src/Math/: Frustum.h  Vector3.h  Vector4.h
Core/src/Render/: BinaryLoader.h  GpuTypes.h  ICommandContext.h  LightRenderSystem.h  NvrhiGpuDevice.cpp  NvrhiGpuDevice.h  RenderPacket.h  RenderView.h  SceneRenderSystem.h  SceneRenderer.cpp  SceneRenderer.h  ShaderLoader.h  SubmittedLight.h
Core/src/Render/Binning/: MeshBinner.cpp  MeshBinner.h
Core/src/Render/FrameGraph/: FrameGraph.cpp
Core/src/Render/Pipeline/: ForwardPlusPipeline.h  IRenderPipeline.h  SkyTransmittance.h
Core/src/Render/RenderGraph/: FrameGraph.cpp  FrameGraph.h  RenderResource.h
Core/src/Render/Sky/: Atmosphere.h  MultiScatteringLUT.h  SkyManager.cpp  SkyManager.h  SkyViewLUT.h  TransmittanceLUT.h
Core/src/Util/: Assert.h  ThreadPool.h  UUID.h
Core/src/Window/: GLFWWindow.cpp
DeferredRender/: premake5.lua
DeferredRender/src/: logger.cpp  logger.h  main.cpp  pipeline_builder.cpp  pipeline_builder.h  vk_buffer.cpp  vk_buffer.h  vk_context.cpp  vk_context.h  vk_debug.cpp  vk_debug.h  vk_descriptors.cpp  vk_descriptors.h  vk_frame.cpp  vk_frame.h  vk_material.cpp  vk_material.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_render_pass.h  vk_renderable.cpp  vk_renderable.h  vk_swapchain.cpp  vk_swapchain.h  vk_texture.cpp  vk_texture.h  vk_types.h  vk_uniforms.cpp  vk_uniforms.h
DeferredRender/src/shader/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
Examples/01_Clear/src/: AppLayer.cpp
Examples/03_BindlessQuad/shaders/: quad.ps.hlsl  quad.vs.hlsl
Examples/03_BindlessQuad/src/: AppLayer.cpp  main.cpp
Examples/TestBed/shaders/: blit.ps.hlsl  blit.vs.hlsl
Examples/TestBed/src/: AppLayer.cpp  AppLayer.h  main.cpp
scripts/: GenProjects-Win.bat  Setup.py  SetupVulkan.py  compile-shaders.bat  compile-shaders.sh
